<resources>
    <string name="app_name">ResolucionExamenT2</string>
    <string name="lbl_main_title">Listado de Carros</string>
    <string name="lbl_main_marca">Marca</string>
    <string name="lbl_main_modelo">Modelo</string>
    <string name="tv_car_marca">Marca</string>
    <string name="tv_car_modelo">Modelo</string>
    <string name="lbl_agregar_marca">Marca :</string>
    <string name="lbl_agregar_title">Agregar Carro</string>
    <string name="lbl_agregar_modelo">Modelo :</string>
    <string name="lbl_agregar_anio">Año :</string>
    <string name="lbl_agregar_asientos">Asientos :</string>
    <string name="lbl_agregar_color">Color :</string>
    <string name="btn_add_guardar">guardar</string>
    <string name="btn_add_cancelar">cancelar</string>
    <string name="et_registrarse_marca">Marca</string>
    <string name="et_agregar_modelo">Modelo</string>
    <string name="et_agregar_anio">Año</string>
    <string name="et_agregar_asientos">Asientos</string>
    <string name="et_agregar_color">Color</string>
    <string name="lbl_details_title">Detalle Carro</string>
    <string name="lbl_details_id">Id :</string>
    <string name="lbl_details_marca">Marca :</string>
    <string name="lbl_details_modelo">Modelo :</string>
    <string name="lbl_details_anio">Año :</string>
    <string name="lbl_details_asientos">Asientos :</string>
    <string name="lbl_details_color">Color :</string>
    <string name="btn_details_guardar">guardar</string>
    <string name="btn_details_cancelar">cancelar</string>
    <string name="fbtn_details_edit">Editar</string>
    <string name="fbtn_details_delete">Eliminar</string>
    <string name="et_details_color">Color</string>
    <string name="et_details_id">Id</string>
    <string name="et_details_marca">Marca</string>
    <string name="et_details_modelo">Modelo</string>
    <string name="et_details_anio">Año</string>
    <string name="et_details_asientos">Asientos</string>
    <string name="fbtn_main_agregar">Agregar Carro</string>
</resources>