<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarDetailsActivity">

    <TextView
        android:id="@+id/lbl_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/chakra_petch_bold"
        android:gravity="center"
        android:text="@string/lbl_details_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/ll_details_id"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_details_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_details_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_details_id"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_details_id"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/text_color_selector"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:fontFamily="@font/chakra_petch_bold"
            android:enabled="false"
            android:hint="@string/et_details_id"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_details_marca"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_details_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_details_marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_details_marca"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_details_marca"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/text_color_selector"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:fontFamily="@font/chakra_petch_bold"
            android:enabled="false"
            android:hint="@string/et_details_marca"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_details_modelo"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_details_marca"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_details_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_details_modelo"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_details_modelo"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/text_color_selector"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:fontFamily="@font/chakra_petch_bold"
            android:enabled="false"
            android:hint="@string/et_details_modelo"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_details_anio"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_details_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_details_anio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_details_anio"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_details_anio"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/text_color_selector"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="number"
            android:fontFamily="@font/chakra_petch_bold"
            android:enabled="false"
            android:hint="@string/et_details_anio"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_details_asientos"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_details_anio"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_details_asientos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_details_asientos"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_details_asientos"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/text_color_selector"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="number"
            android:fontFamily="@font/chakra_petch_bold"
            android:enabled="false"
            android:hint="@string/et_details_asientos"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_details_color"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_details_asientos"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_details_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_details_color"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_details_color"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/text_color_selector"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:fontFamily="@font/chakra_petch_bold"
            android:enabled="false"
            android:hint="@string/et_details_color"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_agregar_btns"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_details_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <Button
            android:id="@+id/btn_details_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/btn_details_guardar"
            android:backgroundTint="@color/confirm"
            android:visibility="invisible"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_details_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/btn_details_cancelar"
            android:backgroundTint="@color/cancel"
            android:visibility="invisible"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtn_details_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fbtn_details_delete"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="15sp"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/fbtn_details_edit" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtn_details_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15sp"
        android:layout_marginStart="15sp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/fbtn_details_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>