<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarActivity">

    <TextView
        android:id="@+id/lbl_agregar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/chakra_petch_bold"
        android:gravity="center"
        android:text="@string/lbl_agregar_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/ll_agregar_marca"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_agregar_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_agregar_marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_agregar_marca"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_registrarse_marca"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:fontFamily="@font/chakra_petch_bold"
            android:hint="@string/et_registrarse_marca"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_agregar_modelo"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_agregar_marca"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_agregar_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_agregar_modelo"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_agregar_modelo"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:fontFamily="@font/chakra_petch_bold"
            android:hint="@string/et_agregar_modelo"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_agregar_anio"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_agregar_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_agregar_anio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_agregar_anio"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_agregar_anio"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="number"
            android:fontFamily="@font/chakra_petch_bold"
            android:hint="@string/et_agregar_anio"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_agregar_asientos"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_agregar_anio"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_agregar_asientos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_agregar_asientos"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_agregar_asientos"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="number"
            android:fontFamily="@font/chakra_petch_bold"
            android:hint="@string/et_agregar_asientos"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_agregar_color"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_agregar_asientos"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <TextView
            android:id="@+id/lbl_agregar_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_agregar_color"
            android:textSize="18sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_agregar_color"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:background="@drawable/rounded_corner_background"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="15sp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="text"
            android:fontFamily="@font/chakra_petch_bold"
            android:hint="@string/et_agregar_color"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_agregar_btns"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_agregar_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        >
        <Button
            android:id="@+id/btn_add_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/btn_add_guardar"
            android:backgroundTint="@color/confirm"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_add_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/btn_add_cancelar"
            android:backgroundTint="@color/cancel"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>