<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbl_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/chakra_petch_bold"
        android:gravity="center"
        android:text="@string/lbl_main_title"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/ll_main_marca_modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_main_title"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/lbl_main_marca"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_main_marca"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="@font/chakra_petch_bold"
            />
        <TextView
            android:id="@+id/lbl_main_modelo"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_main_modelo"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="@font/chakra_petch_bold"
            />

    </LinearLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_main_marca_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycled_car"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_main_marca_modelo"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtn_main_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15sp"
        android:layout_marginEnd="15sp"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/fbtn_main_agregar" />
</androidx.constraintlayout.widget.ConstraintLayout>